<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) Google

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/ui_margin_16dp">

            <TextView
                android:id="@+id/text_item_name"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ui_margin_16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_item_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimary"
                    android:padding="2dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>

                <TextView
                    android:id="@+id/text_item_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ui_margin_16dp"
                    android:layout_weight="1"
                    android:text="@string/checkout_1_rub"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ui_margin_16dp"
                android:text="@string/checkout_caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ui_margin_16dp"
                android:gravity="center"
                android:text="@string/checkout_card_data"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_card_number"
                android:inputType="number"
                android:maxLength="16"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edit_card_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_card_exp"
                android:inputType="number|phone"
                android:maxLength="5"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edit_card_holder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_card_holder_name"
                android:inputType="textCapCharacters"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edit_card_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_card_cvv"
                android:inputType="number"
                android:maxLength="3"
                android:singleLine="true" />

            <Button
                android:id="@+id/button_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gradient_bg"
                android:text="@string/checkout_pay"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ui_margin_16dp"
                android:gravity="center"
                android:text="@string/checkout_or"
                android:textColor="@color/colorPrimary" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ui_margin_16dp">

                <include
                    android:id="@+id/pwg_button"
                    layout="@layout/pay_with_google_button"
                    android:layout_width="@dimen/buy_button_width"
                    android:layout_height="@dimen/buy_button_height"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/pwg_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/pwg_status_checking" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>